Hata düzeltmesi: Eksik 'langchain-openai' kütüphanesi eklendi.

--- a/requirements.txt
+++ b/requirements.txt
@@ -43,3 +43,4 @@ langchain                             # RAG zincirlerini yönetmek için
 openai                                # LLM ve embedding için
 tiktoken                              # Metin parçalama için
 chromadb                              # Vektör veritabanı
+langchain-openai
